[package]
name = "engine-rust"
version = "0.1.0"
authors = ["OnlyOneFace <13522570308@139.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = "0.13.0"
actix-web = "3.0.0-beta.3"
serde = "1.0.115"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["mysql", "runtime-tokio", "macros", "chrono"] }
once_cell = "1.3.1"